--- a/part2/courses/package.json
+++ b/part2/courses/package.json
@@ -9,6 +9,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
+    "typescript": "^4.4.3",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
@@ -37,5 +38,10 @@
   },
   "devDependencies": {
     "@types/react": "^17.0.3"
+  },
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 2,
+    "singleQuote": true
   }
 }
