--- a/part2/phonebook/package.json
+++ b/part2/phonebook/package.json
@@ -45,5 +45,10 @@
   },
   "devDependencies": {
     "json-server": "^0.16.3"
+  },
+  "prettier": {
+    "trailingComma": "es5",
+    "tabWidth": 2,
+    "singleQuote": true
   }
 }
