--- a/part3/package.json
+++ b/part3/package.json
@@ -5,13 +5,15 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "tsc index.ts --esModuleInterop; node index.js",
-    "dev": "tsc index.ts --esModuleInterop; nodemon index.js"
+    "start": "tsc index.ts --esModuleInterop && node index.ts jugyC%40Rz2utTz6J%40qHdFybUe",
+    "dev": "tsc index.ts --esModuleInterop && nodemon index.ts jugyC%40Rz2utTz6J%40qHdFybUe"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/cors": "^2.8.8",
     "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "^16.10.3",
     "nodemon": "^2.0.13",
     "ts-node": "^10.2.1",
@@ -19,12 +21,17 @@
   },
   "dependencies": {
     "@types/morgan": "^1.9.2",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
+    "mongoose": "^6.0.10",
     "morgan": "^1.10.0"
   },
   "prettier": {
     "trailingComma": "es5",
     "tabWidth": 2,
     "singleQuote": true
+  },
+  "engines": {
+    "node": "12.x"
   }
 }
